--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
         <div class="nav-container">
             <a href="#" class="logo">Ferianec</a>
             <ul class="nav-links">
-                <li><a href="#home">Domov</a></li>
-                <li><a href="#portfolio">Portfólio</a></li>
-                <li><a href="#about">O mne</a></li>
-                <li><a href="#services">Služby</a></li>
-                <li><a href="#contact">Kontakt</a></li>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">Bio</a></li>
+                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="#about">Exhibitions and Awards</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </div>
     </nav>
@@ -28,7 +28,7 @@
             <h1 class="hero-title">FERIANEC</h1>
             <p class="hero-subtitle">Product Designer • Visual Artist</p>
             <p class="hero-location">Bratislava, Slovakia</p>
-            <a href="#portfolio" class="cta-button">Pozrieť práce</a>
+            <a href="#portfolio" class="cta-button">Portfolio</a>
         </div>
     </section>
 
@@ -36,42 +36,57 @@
     <main class="main-content">
         <!-- About Section -->
         <section class="section" id="about">
-            <h2 class="section-title">O mne</h2>
+            <h2 class="section-title">Bio</h2>
             <div class="section-content">
-                <p>Som produktový dizajnér so sídlom v Bratislave. Moja tvorba sa pohybuje medzi tradičnými technikami a moderným vizuálnym umením. Každý projekt pristupujem s jedinečným pohľadom a vášňou pre detail.</p>
+                <p>My name is Ondrej Ferianec, a designer from Slovakia, with a Master’s degree in Industrial Design from Lund University.
+                Growing up in a family of engineers and doctors, I chose a creative profession unconventionally.
+                Finding my identity as a creative individual with an interest in sustainability involved overcoming challenges, defying expectations, and seeking acceptance in my surroundings.
+                Besides my parents, my biggest role models are my uncle Majko and his wife Ivanka.</p>
             </div>
         </section>
 
         <!-- Portfolio Section -->
         <section class="section" id="portfolio">
-            <h2 class="section-title">Portfólio</h2>
+            <h2 class="section-title">Portfolio</h2>
             <div class="gallery-grid">
-                <div class="gallery-item">Maľba 1</div>
-                <div class="gallery-item">Ilustrácia 1</div>
-                <div class="gallery-item">Maľba 2</div>
-                <div class="gallery-item">Ilustrácia 2</div>
-                <div class="gallery-item">Maľba 3</div>
-                <div class="gallery-item">Ilustrácia 3</div>
+                <div class="gallery-item">
+                    <img src="cinky.jpg" alt="weights">
+                    <p> Weights</p></div>
+                <div class="gallery-item">
+                    <img src="nabytok.jpg" alt="Furniture">
+                    <p> Furniture</p></div>
+                <div class="gallery-item">
+                    <img src="prestieranie.jpeg" alt="Place setting">
+                    <p> Place Setting</p></div>
+                <div class="gallery-item">
+                    <img src="vazy.jpeg" alt="Vase">
+                    <p> Vase</p></div>
+               <div class="gallery-item">
+                    <img src="lampa II.jpg" alt="Lamp">
+                    <p> Lamp</p></div>
+                <div class="gallery-item">
+                    <img src="lampa.jpeg" alt="Lamp">
+                    <p> Lamp</p></div>
             </div>
         </section>
 
         <!-- Services Section -->
-        <section class="section" id="services">
+        <!--<section class="section" id="services">
             <h2 class="section-title">Služby</h2>
             <div class="section-content">
                 <p>Poskytujam širokú škálu výtvarných služieb.</p>
             </div>
-        </section>
+        </section>-->
 
         <!-- Contact Section -->
         <section class="section" id="contact">
-            <h2 class="section-title">Kontakt</h2>
+            <h2 class="section-title">Contact</h2>
             <div class="section-content">
-                <p>Máte záujem o spoluprácu? Kontaktujte ma a prediskutujeme váš projekt.</p>
-                <br>
-                <p><strong>Email:</strong> info@.sk</p>
-                <p><strong>Telefón:</strong> +421 xxx xxx xxx</p>
-                <p><strong>Adresa:</strong> Bratislava, Slovensko</p>
+
+                <p><strong>Email:</strong> ondrejferianec@gmail.com</p>
+                <p><strong>Phone:</strong> +421 902 575 755</p>
+                <p><strong>Instagram:</strong> _onedrj</p>
+                <p><strong>LinkedIn:</strong> Ondrej Ferianec</p>
             </div>
         </section>
     </main>
