fixed img load v2

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     <img src="vazy.jpeg" alt="Vase">
                     <p> Vase</p></div>
                <div class="gallery-item">
-                    <img src="lampaII.jpg" alt="Lamp">
+                    <img src="lampaII.JPG" alt="Lamp">
                     <p> Lamp</p></div>
                 <div class="gallery-item">
                     <img src="lampa.jpeg" alt="Lamp">
