--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
                 <p>My name is Ondrej Ferianec, a designer from Slovakia, with a Master’s degree in Industrial Design from Lund University.
                 Growing up in a family of engineers and doctors, I chose a creative profession unconventionally.
                 Finding my identity as a creative individual with an interest in sustainability involved overcoming challenges, defying expectations, and seeking acceptance in my surroundings.
-                Besides my parents, my biggest role models are my uncle Majko and his wife Ivanka.</p>
+                <br>
+                Besides my parents, my biggest role models are my uncle <b>Majko</b> and his wife Ivanka.</p>
             </div>
         </section>
 
@@ -59,11 +60,11 @@
                     <img src="prestieranie.jpeg" alt="Place setting">
                     <p> Place Setting</p></div>
                 <div class="gallery-item">
-                    <img src="vazy.jpeg" alt="Vase">
-                    <p> Vase</p></div>
-               <div class="gallery-item">
                     <img src="lampaII.JPG" alt="Lamp">
                     <p> Lamp</p></div>
+               <div class="gallery-item">
+                    <img src="vazy.jpeg" alt="Vase">
+                    <p> Vase</p></div>
                 <div class="gallery-item">
                     <img src="lampa.jpeg" alt="Lamp">
                     <p> Lamp</p></div>
@@ -79,14 +80,16 @@
         </section>-->
 
         <!-- Contact Section -->
+<!-- Contact Section -->
         <section class="section" id="contact">
             <h2 class="section-title">Contact</h2>
             <div class="section-content">
-
-                <p><strong>Email:</strong> ondrejferianec@gmail.com</p>
-                <p><strong>Phone:</strong> +421 902 575 755</p>
-                <p><strong>Instagram:</strong> _onedrj</p>
-                <p><strong>LinkedIn:</strong> Ondrej Ferianec</p>
+                <div class="contact-info">
+                    <p><strong>Email:</strong> ondrejferianec@gmail.com</p>
+                    <p><strong>Phone:</strong> +421 902 575 755</p>
+                    <p><strong>Instagram:</strong> _onedrj</p>
+                    <p><strong>LinkedIn:</strong> Ondrej Ferianec</p>
+                </div>
             </div>
         </section>
     </main>
